--- a/views/team.erb
+++ b/views/team.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>Basketball Team! </h1>
-   Team Name: <%= @name %>
+   <h2> Team Name: <%= @name %><h2>
    Coach: <%= @coach %>
    Point Guard: <%=@pg %>
    Power Forward: <%=@pf %>
