--- a/views/team.erb
+++ b/views/team.erb
@@ -5,9 +5,8 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   <h1>Basketball Team! </h1>
-   <h2> Team Name: <%= @name %><h2>
-   Coach: <%= @coach %>
+   <h1>Team Name: <%= @name %> </h1>
+   <h2>Coach: <%= @coach %></h2>
    Point Guard: <%=@pg %>
    Power Forward: <%=@pf %>
    Shooting Guard: <%=@sg %>
